# Multi-Robot-Naviagtion-Using-Centralized-and-Decentralized-Monte-Carlo-Tree-Search

./: README.md
mcts/: package.xml  setup.cfg  setup.py
mcts/launch/: Decentralized_MCTS.py  Decentralized_MCTS_multi_window.py
mcts/mcts/: Centralized_MCTS.py  mcts_single.py  mcts_tb1.py  mcts_tb2.py  mcts_tb3.py  mcts_tb4.py  parameters.py  plot_metrics.py
turtlebot3_multi_robot/: CMakeLists.txt  package.xml
turtlebot3_multi_robot/launch/: gazebo_multi_robot_custom_world.launch.py
turtlebot3_multi_robot/models/turtlebot3_burger/: model.sdf
turtlebot3_multi_robot/models/turtlebot3_burger/meshes/: burger_base.daeZone.Identifier
turtlebot3_multi_robot/models/turtlebot3_waffle/: model-1_4.sdf  model.sdf
turtlebot3_multi_robot/models/turtlebot3_waffle/meshes/: r200.daeZone.IdentifierZone.Identifier
turtlebot3_multi_robot/worlds/: multi_empty_world.world  multi_robot_world.world
